<resources>
    <string name="app_name" translatable="false">TrabalhoTCC</string>

    <string name="facebook_app_id" translatable="false">470219803333689</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb470219803333689</string>
    <string name="usuario_text">User</string>
    <string name="senha_text">Password</string>
    <string name="continuar_conectado">Stay signed</string>
    <string name="botao_login_text">Log on</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="modelo_text">Model</string>
    <string name="valor_text">Price</string>
    <string name="preco_text">Price</string>
    <string name="botao_cadastrar_text">Register</string>
    <string name="ano_text">Year</string>
    <string name="ligar">Turn on</string>
    <string name="cadastro">Product</string>
    <string name="lista_de_dados">List of products</string>
    <string name="sobre">About</string>
    <string name="mapa">Map</string>
    <string name="compartilhar">Share</string>
    <string name="fazer_ligacao">Call</string>
    <string name="title_activity_maps">Map</string>
    <string name="desenvolvido">Developer:</string>
    <string name="nomeDesenv" translatable="false">Raphael Oneto Gnecco</string>
    <string name="tvVersion">Version</string>
    <string name="tvNumVersion" translatable="false">1.0</string>
    <string name="welcome_message">"Welcome: "</string>
    <string name="log_out">Log out</string>
    <string name="facebook_cancel">Cancel</string>
    <string name="facebook_error">Fail to login with facebook</string>
    <string name="permission_denied_call">Permission denied</string>
    <string name="call_error">Fail to call</string>
    <string name="Sair">Exit</string>
    <string name="Share">Share</string>
    <string name="share_text">Share via</string>
    <string name="subject_share">Subject Here</string>
    <string name="communicate">Communicate</string>
    <string name="login_senha_incorretos">Username or password incorrect</string>
</resources>
